--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -94,3 +94,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.PhysicsSettings]
+bTickPhysicsAsync=False
+bSubsteppingAsync=False
+AsyncFixedTimeStepSize=0.100000
+
