--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,6 +96,6 @@ ManualIPAddress=
 
 [/Script/Engine.PhysicsSettings]
 bTickPhysicsAsync=False
-bSubsteppingAsync=False
+bSubsteppingAsync=True
 AsyncFixedTimeStepSize=0.100000
 
