--- a/ELDWipeout.uproject
+++ b/ELDWipeout.uproject
@@ -23,6 +23,10 @@
 			"Name": "DirGravity",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/1e8883ab1e2f44f0984006d4ab67acd4"
+		},
+		{
+			"Name": "PCG",
+			"Enabled": true
 		}
 	]
 }
